--- a/.github/assets/rounded-logo-template.html
+++ b/.github/assets/rounded-logo-template.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="rounded-image">
-        <img src="inpensa-logo.png" alt="Inpensa Logo">
+        <img src="inpenso-logo.png" alt="Inpenso Logo">
     </div>
     
     <h2>How to use this template</h2>
@@ -47,7 +47,7 @@
         1. Open this HTML file in a browser<br>
         2. Take a screenshot of the rounded logo<br>
         3. Crop the screenshot to just include the rounded logo<br>
-        4. Save it as "inpensa-logo-rounded.png" in the .github/assets folder<br>
+        4. Save it as "inpenso-logo-rounded.png" in the .github/assets folder<br>
         5. Update the README.md to use this new rounded logo image
     </p>
 </body>
